@@ -3,8 +3,7 @@ package org.talend.repository.services.ui.scriptmanager;
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.EnumMap;
@@ -86,8 +85,8 @@ public class ServiceExportManager extends JobJavaScriptOSGIForESBManager {
                             // http://jira.talendforge.org/browse/TESB-3638
                             endpointAddress = ((SOAPAddress) element).getLocationURI();
                             try {
-                                URL url = new URL(endpointAddress);
-                                endpointAddress = url.getPath();
+                                URI uri = URI.create(endpointAddress);
+                                endpointAddress = uri.getPath();
 
                                 if (endpointAddress.equals("/services/") || endpointAddress.equals("/services")) {
                                     // pass as is
@@ -99,8 +98,8 @@ public class ServiceExportManager extends JobJavaScriptOSGIForESBManager {
                                 } else if (endpointAddress.length() == 1) { // empty path
                                     endpointAddress += studioServiceName;
                                 }
-                            } catch (MalformedURLException e) {
-                                logger.error("Endpoint URI invalid: " + e);
+                            } catch (IllegalArgumentException e) {
+                                logger.warn("Endpoint URI invalid: " + e.getCause());
                             }
                         }
                     }
@@ -211,7 +210,7 @@ public class ServiceExportManager extends JobJavaScriptOSGIForESBManager {
 
     /*
      * (non-Javadoc)
-     * 
+     *
      * @see org.talend.repository.ui.wizards.exportjob.scriptsmanager.esb.
      * JobJavaScriptOSGIForESBManager#getOutputSuffix()
      */
